nova_tests/negative_capability/closure_typed_param_rejected.nv
// EXPECT_COMPILE_ERROR untyped
//
// Plan 19 D22-rev: closure-light `|x| body` всегда untyped.
// Если нужны типы — переключайся на closure-full `fn(x T) -> R body`.

module nova_tests.negative_capability.closure_typed_param_rejected

test "closure-light с типом параметра отвергается" {
    let inc = |x int| x + 1
    assert(inc(5) == 6)
}
